added author details

--- a/github-api/index.html
+++ b/github-api/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Github API Tests</h1>
+    <h1>Open pull requests on website-welcome</h1>
     <div id="pulls"></div>
     <script src = "script.js"></script>
 </body>
